# ytdlp-discord

./: .gitignore  Cargo.toml  Dockerfile  config.toml
.github/workflows/: docker-publish.yml
src/: main.rs
