[package]
name = "ytdlp-output-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
